# libjpeg-turbo-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  FORMATTING.md  LICENSE-APACHE  METHODOLOGY.md  Makefile  README.md  bench_c_decode_matrix  bench_c_encode_linux  bench_c_encode_matrix  bench_c_progressive_encode_matrix
.githooks/: pre-commit
.github/hooks/: install.sh  pre-commit
.github/workflows/: ci.yml  release.yml
benches/: c_baseline.c  compare.rs  decode.rs  encode.rs
docs/: C_API_REFERENCE.md  ENCODING_PERFORMANCE.md  FEATURE_PARITY.md  TEST_PARITY.md
docs/superpowers/plans/: 2026-03-21-phase1-baseline-decoder.md  2026-03-22-phase2-six-features.md  2026-03-22-phase3-six-features.md  2026-03-22-phase4-foundation.md  (+2 more)
examples/: bench_c_decode_linux.c  bench_c_decode_matrix.c  bench_c_encode_linux.c  bench_c_encode_matrix.c  bench_c_encode_prog.c  bench_c_progressive_encode_matrix.c  bench_encode_matrix.rs  bench_encode_prog_matrix.rs  bench_matrix.rs  bench_rust_progressive_encode_matrix.rs  profile_1080p.rs  profile_444.rs  profile_decode.rs  profile_encode.rs  profile_progressive.rs  profile_progressive_breakdown.rs  profile_progressive_encode.rs
experiments/: README.md  baseline.txt  encode.tsv  huffman.tsv  idct.tsv  pipeline.tsv  progressive.tsv  progressive_encode.tsv  upsample.tsv  x86_64_baseline.txt  x86_64_color.tsv  x86_64_idct.tsv  x86_64_pipeline.tsv
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_decompress.rs  fuzz_decompress_lenient.rs  fuzz_progressive_decoder.rs  fuzz_read_coefficients.rs  fuzz_roundtrip.rs  fuzz_transform.rs
scripts/: c_test_inventory.json  extract_c_tests.py  parity_report.json  verify_test_parity.py
src/: lib.rs
src/api/: coefficient.rs  encoder.rs  high_level.rs  image_io.rs  mod.rs  precision.rs  progressive_output.rs  quality.rs  quantize.rs  raw_data.rs  scanline.rs  stream.rs  streaming.rs  tj3.rs  yuv.rs
src/common/: arith_tables.rs  bufsize.rs  error.rs  exif.rs  huffman_table.rs  icc.rs  jfif.rs  mod.rs  quant_table.rs  sample.rs  traits.rs  types.rs
src/decode/: arithmetic.rs  bitstream.rs  color.rs  dequant.rs  entropy.rs  huffman.rs  idct.rs  idct_extended.rs  idct_scaled.rs  lossless.rs  marker.rs  merged_upsample.rs  mod.rs  pipeline.rs  progressive.rs  toggles.rs  upsample.rs
src/encode/: arithmetic.rs  color.rs  fdct.rs  huff_opt.rs  huffman_encode.rs  marker_writer.rs  mod.rs  pipeline.rs  progressive.rs  quant.rs  tables.rs
src/simd/: mod.rs  scalar.rs
src/transform/: mod.rs  spatial.rs
tests/: arithmetic.rs  bitstream.rs  bitstream_regression.rs  bitstream_stability.rs  bitstream_structure.rs  bufsize.rs  bufsize_extras.rs  c_cjpeg_djpeg_tests.rs  c_croptest.rs  c_indexedcolortest.rs  c_tjcomptest.rs  c_tjdecomptest.rs  c_tjtrantest.rs  cmyk_encode.rs  coeff_filter.rs  color_convert.rs  common_types.rs  concurrency.rs  conformance.rs  copy_mode.rs  crop_c_compat.rs  crop_skip.rs  cross_check_12bit.rs  cross_check_coeff_filter.rs  cross_check_color_quantize.rs  cross_check_crop_scale.rs  cross_check_dct_decode.rs  cross_check_encoder_binary.rs  cross_check_encoder_options.rs  cross_check_extended_scaling.rs  cross_check_extreme_dims.rs  cross_check_lossless.rs  cross_check_merged_upsample_formats.rs  cross_check_metadata.rs  cross_check_metadata_edge.rs  cross_check_misc_gaps.rs  cross_check_per_quality.rs  cross_check_pixel_format_decode.rs  cross_check_pixel_format_encode.rs  cross_check_precision.rs  (+102 more)
tests/helpers/: mod.rs
(+33 files in other folders)
