[package]
name = "libjpeg-turbo-rs"
version = "0.1.0"
edition = "2021"
description = "Pure Rust reimplementation of libjpeg-turbo"
license = "MIT OR Apache-2.0"

[features]
default = ["simd"]
simd = []

[dependencies]
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
zune-jpeg = "0.5"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "encode"
harness = false

[profile.release]
lto = true
