[package]
name = "libjpeg-turbo-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Pure Rust reimplementation of libjpeg-turbo with NEON/AVX2 SIMD acceleration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/developer0hye/libjpeg-turbo-rs"
readme = "README.md"
keywords = ["jpeg", "image", "simd", "encoder", "decoder"]
categories = ["multimedia::images", "multimedia::encoding"]
exclude = [
    "references/",
    "tests/fixtures/",
    "examples/",
    "benches/",
    "docs/",
    "experiments/",
    "bench_c_*",
    "*.md",
    "!README.md",
    ".github/",
]

[features]
default = ["simd"]
simd = []

[dependencies]
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
zune-jpeg = "0.5"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "encode"
harness = false

[profile.release]
lto = true
